adding sheds capability
