# src/main/java/com/mahashakti/mahashaktiBE/entities/FeedCompositionEntity.java
@@ -1,5 +1,6 @@
 package com.mahashakti.mahashaktiBE.entities;
 
+
 import jakarta.persistence.Entity;
 import jakarta.persistence.Column;
 import jakarta.persistence.Table;
@@ -7,54 +8,41 @@ import jakarta.persistence.Id;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.ManyToOne;
-import jakarta.persistence.JoinColumn;
 import jakarta.persistence.FetchType;
-import lombok.Data;
-import org.hibernate.annotations.CreationTimestamp;
-import org.hibernate.annotations.UpdateTimestamp;
+import jakarta.persistence.JoinColumn;
 
+import lombok.Data;
+import org.hibernate.annotations.UpdateTimestamp;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Date;
 import java.util.UUID;
 
 @Data
 @Entity
-@Table(name = "material_consumption")
-public class MaterialConsumptionEntity {
+@Table(name = "feed_composition")
+public class FeedCompositionEntity {
 
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
-    @Column(name = "id", nullable = false, updatable = false)
+    @Column(name = "id", updatable = false, nullable = false)
     private UUID id;
+
+    @ManyToOne(fetch = FetchType.EAGER)
+    @JoinColumn(name = "shed_id", referencedColumnName = "id", nullable = false)
+    private ShedEntity shed;
 
     @ManyToOne(fetch = FetchType.EAGER)
     @JoinColumn(name = "material_id", nullable = false)
     private MaterialEntity material;
 
     @Column(nullable = false)
-    private BigDecimal quantity;
-
-    @ManyToOne(fetch = FetchType.EAGER)
-    @JoinColumn(name = "shed_id")
-    private ShedEntity shed;
-
-    @Column(name = "consumption_date", nullable = false)
-    private Date consumptionDate;
-
-    @Column(name = "created_by", length = 50)
-    private String createdBy;
+    private BigDecimal quantityPerTonne;
 
     @Column(name = "updated_by", length = 50)
     private String updatedBy;
 
-    @Column(name = "created_at")
-    @CreationTimestamp
-    private LocalDateTime createdAt;
-
     @Column(name = "updated_at")
     @UpdateTimestamp
     private LocalDateTime updatedAt;
-
 }
